templates/sg.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: This template creates several Security Groups for use in subsequent stacks 

Parameters:
  VpcId:
    Type: String
  VpcCidr:
    Type: String
  PublicRemoteCidr:
    Type: String

Resources:
 
  NvidiaAmiSG:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "This security group was generated by AWS Marketplace and is based on recommended settings for NVIDIA CloudXR AMI Introductory Offer - WinServer 2019 version CloudXR 3.1 VGPU 13.1 provided by NVIDIA"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref PublicRemoteCidr
        - IpProtocol: tcp
          FromPort: 48010
          ToPort: 48010
          CidrIp: !Ref PublicRemoteCidr
        - IpProtocol: udp
          FromPort: 48010
          ToPort: 48010
          CidrIp: !Ref PublicRemoteCidr
        - IpProtocol: udp
          FromPort: 47998
          ToPort: 48000
          CidrIp: !Ref PublicRemoteCidr
        - IpProtocol: udp
          FromPort: 48005
          ToPort: 48005
          CidrIp: !Ref PublicRemoteCidr
        - IpProtocol: tcp
          FromPort: 47998
          ToPort: 48000
          CidrIp: !Ref PublicRemoteCidr
        - IpProtocol: tcp
          FromPort: 48005
          ToPort: 48005
          CidrIp: !Ref PublicRemoteCidr
        - IpProtocol: udp
          FromPort: 48002
          ToPort: 48002
          CidrIp: !Ref PublicRemoteCidr  
        - IpProtocol: tcp
          FromPort: 48002
          ToPort: 48002
          CidrIp: !Ref PublicRemoteCidr
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: !Ref PublicRemoteCidr  
      VpcId: !Ref VpcId


Outputs:
  AllowQumuloSGId:
    Value: !Ref NvidiaAmiSG
